Update run instructions for Bank ATM